Followed a little RequestContext refactor